# Puff-UAF

./: AUTHORS  BINARIES  INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  acinclude.m4  autobots-assemble.sh  config.h  config.h.in  config.status  configure  configure.in  libtool  license.terms
doc/: Makefile.am  Makefile.in  gpl.texi  puff.texi
doc/images/: flow.eps  flow.fig  flow.txt  flow2.0.eps  flow2.0.fig  flow2.0.txt  flow2.1.eps  flow2.1.fig  flow2.1.fig.bak  flow2.1.txt  logos.eps  logos2.eps  ncepgrid.eps  ncepgrid.txt  plume_shape.eps  plume_shape.fig  plume_shape2.eps  puff1.eps  pufftk_gui.eps
etc/: puffrc  volcanos.txt
man/: Makefile  Makefile.am  Makefile.in  ashxp.1
src/: COPYING  Makefile  Makefile.am  Makefile.in  ash.C  ash.h  ashdump  ashdump.C  ashdump_options.C  ashdump_options.h  atmosphere.C  atmosphere.h  cloud.C  cloud.h  dem.C  dem.h  my_getopt.c  my_getopt.h  particle.C  particle.h  planes.C  planes.h  pp2nc  pp2nc.C  puff  puff.C  puff.h  puff_options.C  puff_options.h  puff_utils.C  ran_utils.C  ran_utils.h  rcfile.C  rcfile.h  uni2puff_options.h  volc_utils.C  volc_utils.h  volcanos.txt
src/.deps/: ash.Po  ashdump.Po  ashdump_options.Po  atmosphere.Po  cloud.Po  dem.Po  particle.Po  planes.Po  pp2nc.Po  puff.Po  puff_options.Po  puff_utils.Po  ran_utils.Po  rcfile.Po  volc_utils.Po
src/.libs/: puff
src/ashxp/: ChangeLog  Makefile  Makefile.am  Makefile.in  arg_util.c  ashxp  ashxp.c  ashxp.h  color.c  color.h  fileio.c  make_jpeg.c  make_jpeg.h  my_getopt.c  projection.c  projection.h  readash.c
src/ashxp/.deps/: arg_util.Po  ashxp.Po  color.Po  fileio.Po  make_jpeg.Po  projection.Po  readash.Po
src/ashxp/jpeg-6b/: Makefile  Makefile.am  Makefile.in
src/libsrc/: Grid.h  Makefile  Makefile.am  Makefile.in  datetime.h  display.C  display.lo  fg_io.C  fg_io.lo  fltGrid.C  fltGrid.lo  libpuff.la  netcdf_io.C  netcdf_io.lo  patch.C  patch.lo  pp_io.C  pp_io.lo  uniGrid.C  uniGrid.lo  utils.C  vspline.C  vspline.lo
src/libsrc/.deps/: display.Plo  fg_io.Plo  fltGrid.Plo  netcdf_io.Plo  patch.Plo  pp_io.Plo  uniGrid.Plo  utils.Plo  vspline.Plo
src/libsrc/.libs/: libpuff.la  libpuff.lai  libpuff.so.0.0.0
src/libsrc/dmapf-c/: Makefile  Makefile.am  Makefile.in
src/libsrc/dmapf-c/.deps/: basegm.Po  cmapf.Po  eqvlat.Po  geog_ll.Po  kcllxy.Po  limmath.Po  ll_geog.Po  lmbrt.Po  map_xy.Po  mapstart.Po  obmrc.Po  obqlmbrt.Po  obstr.Po  proj_3d.Po  stcm1p.Po  stcm2p.Po  teststr.Po  trnsmrc.Po  tsteqvlt.Po  vector_3.Po  xy_map.Po
src/perl/: Makefile  Makefile.am  Makefile.in  ashdump.pl  ashdump.pl.in  ashgmt  ashgmt.in  grib2pf  grib2pf.in  rereference.pl  rereference.pl.in
test/: Makefile  Makefile.am  Makefile.in  README  example.cloud  test00.sh  test00.sh.in  test00b.sh  test00b.sh.in  test01.sh  test02.sh  test03.sh  test04.sh  test05.sh  test06.sh  test07.sh  test08.sh  test09.sh  test10.sh
web/: Makefile  Makefile.am  Makefile.in  Webpuff.pm  Webpuff.pm.in  ashxpOptions.pl  ashxpOptions.pl.in  login.pl  login.pl.in  logout.pl  logout.pl.in  main.pl  main.pl.in  runParams.pl  runParams.pl.in  webpuff  webpuff.css  webpuff.in  webpuff.pl.in
web/help/: ashLogMean.html  diffuseH.html  diffuseZ.html  eruptHours.html  format.html  gridlines.html  latlon.html  model.html  nAsh.html  phiDist.html  plumeMax.html  plumeMin.html  plumeWidth.html  plumeZwidth.html  previous.html  regionalWinds.html  restartFile.html  runHours.html  saveHours.html  volcano_name.html  webpuff.html
web/javascript/: webpuff.js
web/mini_httpd/: Makefile  Makefile.am  Makefile.in  mini_httpd
web/mini_httpd/.deps/: match.Po  mini_httpd.Po  tdate_parse.Po
