if PUFF_NEED_LIBDMAPF
noinst_LIBRARIES = libdmapf.a
endif

libdmapf_a_SOURCES = basegm.c cmapf.c eqvlat.c geog_ll.c kcllxy.c limmath.c \
ll_geog.c lmbrt.c map_xy.c mapstart.c obmrc.c obqlmbrt.c obstr.c proj_3d.c  \
stcm1p.c stcm2p.c teststr.c trnsmrc.c tsteqvlt.c vector_3.c xy_map.c  $(HEADER_SRC)
 
HEADER_SRC = cmapf.h  limmath.h  vector_3.h
